# Pengenuity

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
src/: agent.py  main.py  task_manager.py
src/llm/: json_output_parser.py  list_output_parser.py
src/llm/extract_entity/: prompt.py  schema.py
src/llm/generate_task_plan/: prompt.py
src/llm/reason/: prompt.py  schema.py
src/llm/summarize/: prompt.py
src/memory/: episodic_memory.py  procedual_memory.py  semantic_memory.py
src/tools/: base.py
src/ui/: base.py  cui.py
